--- a/src/Custom.css
+++ b/src/Custom.css
@@ -438,7 +438,7 @@
     align-items: center;
   }
   .logo-image{
-    margin-top: -3%;
+    margin-top: 10px;
     margin-left: -2%;
     height: 90px;
     width: 80px;
@@ -478,7 +478,7 @@
 
 @media (max-width: 991px) {
   .logo-image{
-    margin-top: -3%;
+    margin-top: 10px;
     margin-left: -2%;
     height: 90px;
     width: 80px;
@@ -486,6 +486,7 @@
   .navbar {
     flex-direction: column;
     align-items: center;
+    padding: 2em;
   }
   .memories-container {
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
@@ -528,7 +529,7 @@
 
 @media (max-width: 773px) {
   .logo-image{
-    margin-top: -3%;
+    margin-top: 10px;
     margin-left: -2%;
     height: 90px;
     width: 80px;
@@ -536,6 +537,7 @@
   .navbar {
     flex-direction: column;
     align-items: center;
+    padding: 2em;
   }
   .media-section {
     gap: 50px;
@@ -579,7 +581,7 @@
 
 @media (max-width: 489px) {
   .logo-image{
-    margin-top: -3%;
+    margin-top: 10px;
     margin-left: -2%;
     height: 90px;
     width: 80px;
@@ -626,7 +628,7 @@
 /* For screens 365px and below */
 @media (max-width: 365px) {
   .logo-image{
-    margin-top: -3%;
+    margin-top: 10px;
     margin-left: -2%;
     height: 90px;
     width: 80px;
@@ -649,7 +651,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1em;
+  padding: 2em
 }
 
 .emoji-center {
