--- a/src/Custom.css
+++ b/src/Custom.css
@@ -437,9 +437,14 @@
     flex-direction: column;
     align-items: center;
   }
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2em
+  }
   .logo-image{
     margin-top: 10px;
-    margin-left: -2%;
     height: 90px;
     width: 80px;
   }
@@ -479,7 +484,6 @@
 @media (max-width: 991px) {
   .logo-image{
     margin-top: 10px;
-    margin-left: -2%;
     height: 90px;
     width: 80px;
   }
@@ -530,7 +534,6 @@
 @media (max-width: 773px) {
   .logo-image{
     margin-top: 10px;
-    margin-left: -2%;
     height: 90px;
     width: 80px;
   }
@@ -582,9 +585,14 @@
 @media (max-width: 489px) {
   .logo-image{
     margin-top: 10px;
-    margin-left: -2%;
     height: 90px;
     width: 80px;
+  }
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2em
   }
   .navbar-links {
     display: none;
@@ -629,7 +637,6 @@
 @media (max-width: 365px) {
   .logo-image{
     margin-top: 10px;
-    margin-left: -2%;
     height: 90px;
     width: 80px;
   }
