--- a/src/Custom.css
+++ b/src/Custom.css
@@ -433,6 +433,10 @@
 
 
 @media (max-width: 1200px) {
+  .logo-image{
+    width: 100px;
+    height: 100px;
+  }
   .media-section {
     flex-direction: column;
     align-items: center;
@@ -477,6 +481,10 @@
 }
 
 @media (max-width: 991px) {
+  .logo-image{
+    width: 90;
+    height: 90;
+  }
   .navbar {
     flex-direction: column;
     align-items: center;
@@ -522,6 +530,10 @@
 }
 
 @media (max-width: 773px) {
+  .logo-image {
+    width: 80px;
+    height: 80px;
+  }
   .navbar {
     flex-direction: column;
     align-items: center;
@@ -568,6 +580,10 @@
 }
 
 @media (max-width: 489px) {
+  .logo-image {
+    width: 70px;
+    height: 70px;
+  }
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -615,6 +631,10 @@
 
 /* For screens 365px and below */
 @media (max-width: 365px) {
+  .logo-image {
+    width: 60px;
+    height: 60px;
+  }
   .home-page h1 {
     font-size: 1.5em;
   }
