--- a/src/Custom.css
+++ b/src/Custom.css
@@ -435,8 +435,9 @@
 @media (max-width: 1200px) {
   .logo-image{
     width: 100px;
-    height: 120px;
-    margin-bottom: 50px;
+    height: auto;
+    margin-left: 10px;
+    margin-top: 10px;
   }
   .media-section {
     flex-direction: column;
@@ -484,8 +485,9 @@
 @media (max-width: 991px) {
   .logo-image{
     width: 90;
-    height: 110;
-    margin-bottom: 50px;
+    height: auto;
+    margin-left: 10px;
+    margin-top: 10px;
   }
   .navbar {
     flex-direction: column;
@@ -534,8 +536,9 @@
 @media (max-width: 773px) {
   .logo-image {
     width: 80px;
-    height: 100px;
-    margin-bottom: 50px;
+    height: auto;
+    margin-left: 10px;
+    margin-top: 10px;
   }
   .navbar {
     flex-direction: column;
@@ -585,8 +588,9 @@
 @media (max-width: 489px) {
   .logo-image {
     width: 70px;
-    height: 90px;
-    margin-bottom: 50px;
+    height: auto;
+    margin-left: 10px;
+    margin-top: 10px;
   }
   .navbar {
     display: flex;
@@ -636,9 +640,10 @@
 /* For screens 365px and below */
 @media (max-width: 365px) {
   .logo-image {
-    width: 60px;
-    height: 80px;
-    margin-bottom: 50px;
+    width: 50px;
+    height: auto;
+    margin-left: 10px;
+    margin-top: 10px;
   }
   .home-page h1 {
     font-size: 1.5em;
