--- a/src/Custom.css
+++ b/src/Custom.css
@@ -435,9 +435,8 @@
 @media (max-width: 1200px) {
   .logo-image{
     width: 100px;
-    height: auto;
+    height: 140px;
     margin-left: 10px;
-    margin-top: 4px;
   }
   .media-section {
     flex-direction: column;
@@ -485,9 +484,8 @@
 @media (max-width: 991px) {
   .logo-image{
     width: 90;
-    height: auto;
+    height: 130px;
     margin-left: 10px;
-    margin-top: 4px;
   }
   .navbar {
     flex-direction: column;
@@ -536,9 +534,8 @@
 @media (max-width: 773px) {
   .logo-image {
     width: 80px;
-    height: auto;
+    height: 120px;
     margin-left: 10px;
-    margin-top: 4px;
   }
   .navbar {
     flex-direction: column;
@@ -588,9 +585,8 @@
 @media (max-width: 489px) {
   .logo-image {
     width: 70px;
-    height: auto;
+    height: 110px;
     margin-left: 10px;
-    margin-top: 4px;
   }
   .navbar {
     display: flex;
@@ -641,9 +637,8 @@
 @media (max-width: 365px) {
   .logo-image {
     width: 50px;
-    height: auto;
+    height: 100px;
     margin-left: 10px;
-    margin-top: 4px;
   }
   .home-page h1 {
     font-size: 1.5em;
